<resources>
    <string name="app_name">GeoChat</string>
    <string name="app_description">private chat with people nearby</string>
    <string name="login_phone_desc">Login with phone number</string>
    <string name="login_phone">phone number</string>
    <string name="login_verify">Please,enter your verify code:</string>
    <string name="login">Login</string>
    <string name="login_send_button">Send</string>
    <string name="login_retry_button">Resend</string>
    <string name="verify_code">Verification Code</string>
    <string name="login_next">Login</string>
    <string name="need_help">Need Help?</string>


    <string name="title_activity_registration">Registration</string>
    <string name="registration_button">Register</string>
    <string name="registration_photo_desc">Upload your best photo!</string>
    <string name="registration_name_desc">Input your nickname</string>
    <string name="registration_name">for example : Alex</string>
    <string name="registration_birthdate_desc">Select your birthdate</string>
    <string name="registration_birthdate">your birthdate</string>
    <string name="registration_gender_desc">Select your gender</string>
    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="title_settings">Settings</string>
    <string name="title_profile">Profile</string>
    <string name="title_nearby">Nearby</string>
    <string name="title_messages">Messages</string>
    <string name="title_notifications">Notifications</string>


</resources>
