<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/BottomNotifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications">
    </item>

    <item android:id="@+id/BottomProfile"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/title_profile">
    </item>

    <item android:id="@+id/BottomNearby"
        android:icon="@drawable/ic_near_me_black_24dp"
        android:title="@string/title_nearby">
    </item>

    <item android:id="@+id/BottomMessages"
        android:icon="@drawable/ic_message_black_24dp"
        android:title="@string/title_messages">
    </item>

    <item android:id="@+id/BottomSettings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/title_settings">
    </item>

</menu>
