<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@drawable/gradient_background"
    tools:context=".ActivityLogin">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp">

        <ImageView
            android:id="@+id/imgView_logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_geochat"/>
        
        <RelativeLayout
            android:id="@+id/rellay"
            android:layout_below="@+id/imgView_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone">
            
            <TextView
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="30sp"/>

            <TextView
                android:id="@+id/login_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="55dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/app_description"
                android:textColor="@color/white"
                android:textSize="15sp"/>

            <LinearLayout
                android:id="@+id/linlay1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login"
                android:layout_marginTop="40dp"
                android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/login_phone_desc"
                    android:textColor="@color/white"
                    android:textSize="15sp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:gravity="center_vertical"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.hbb20.CountryCodePicker
                    android:id="@+id/ccp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:ccp_contentColor="@color/white"
                    app:ccp_rememberLastSelection="true"
                    app:ccpDialog_allowSearch="false"
                    app:ccp_countryPreference="US,AZ,RU"
                    app:ccp_autoDetectCountry="true"
                    app:ccp_textSize="15sp"
                    app:ccp_countryAutoDetectionPref="SIM_ONLY"/>
                
                <EditText
                    android:id="@+id/phoneText"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/button_corner"
                    android:hint="@string/login_phone"
                    android:textColorHint="@color/slightly_gray"
                    android:inputType="phone"
                    android:singleLine="true"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:textColor="@color/slightly_gray"
                    android:textSize="15sp" />

            </LinearLayout>
            </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/linlay_buttons"
                android:layout_below="@+id/linlay1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp">

                <Button
                    android:id="@+id/login_send"
                    android:layout_width="130dp"
                    android:layout_height="40dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/button_new"
                    android:text="@string/login_send_button"
                    android:textAllCaps="false"
                    android:onClick="sendCode"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:layout_marginBottom="8dp"/>

                <Button
                    android:id="@+id/login_resend"
                    android:layout_width="130dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/button_new"
                    android:text="@string/login_retry_button"
                    android:textAllCaps="false"
                    android:onClick="resendCode"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:layout_marginBottom="8dp"/>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/linlay_verify"
                android:layout_below="@id/linlay_buttons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:layout_centerHorizontal="true">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/login_verify"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/codeText"
                    android:layout_width="180dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:maxLength="6"
                    android:background="@drawable/button_round"
                    android:hint="@string/verify_code"
                    android:inputType="number"
                    android:textColor="@color/slightly_gray"
                    android:textColorHint="@color/slightly_gray" />
            </LinearLayout>
            <Button
                android:id="@+id/login_next"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_below="@+id/linlay_verify"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:background="@drawable/button_new"
                android:fontFamily="sans-serif-medium"
                android:paddingLeft="70dp"
                android:paddingRight="70dp"
                android:text="@string/login_next"
                android:onClick="verifyCode"
                android:layout_marginBottom="50dp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </RelativeLayout>


    </RelativeLayout>
    <Button
        android:id="@+id/help_button"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:background="@drawable/button_wo_corner"
        android:fontFamily="sans-serif-medium"
        android:onClick="needHelpButton"
        android:paddingLeft="70dp"
        android:paddingRight="70dp"
        android:text="@string/need_help"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:visibility="gone"/>
</RelativeLayout>